core/compiler/tests/programs/ok/closure_2.loz
f x y = g
where
    g a b = x * y * a * b
.

main
# bla = f 1 2
= bla 3 4